# gol

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/seeds/: infinite2.txt
src/gol/: core.py
